--- a/src/components/Projects/Projects.styles.scss
+++ b/src/components/Projects/Projects.styles.scss
@@ -6,7 +6,7 @@
 }
 
 #projects {
-  padding-top: 56px;
+  padding-top: 176px;
   text-align: center;
 
   ul {
@@ -27,8 +27,4 @@
     margin: 0 1.4rem;
     padding-top: 1.4rem;
   }
-}
-
-#projects {
-  position: relative;
 }
