--- a/src/pages/index.styles.scss
+++ b/src/pages/index.styles.scss
@@ -11,7 +11,7 @@ h2 {
   font-size: 6.5rem;
 
   @media (max-width: 1170px) {
-    font-size: 1.2rem;
+    font-size: 2.4rem;
   }
 }
 
